Switch to use Java 21 virtual threads for lower overhead when exporting sound files.